--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "marked": "^17.0.1"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.18",
     "autoprefixer": "^10.4.23",
     "postcss": "^8.5.6",
     "postcss-cli": "^11.0.1",
